--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -146,7 +146,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <h2 class="overview"><span class="brandname-emphasis">GeoTrellis</span> is a fast raster processing library for the web and the cluster.</h2>
+                <h2 class="overview"><span class="brandname-emphasis">GeoTrellis</span> is a geographic data processing engine for high performance applications.</h2>
             </div>
         </div>
     </div>
