Remove controller on mobile

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -2,7 +2,7 @@
 
 <div id="interactive-demos">
     <div id="carousel-controller" class="carousel slide carousel-fade">
-      <div class="carousel-inner" id="demo-controllers">
+      <div class="carousel-inner hidden-xs" id="demo-controllers">
         <div id="controller-1" class="demo-container item active">
             <h4 class="demo-controller-super-header">
                 GeoTrellis in Action:
