Change copy in hillshade description

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -60,7 +60,7 @@
                 Hillshade
             </h2>
             <p>
-                The GeoTrellis hillshade operation computes the illumination angle and shadows of a surface given a light source. Try adjusting the time of day to change the height of the light source.
+                The GeoTrellis hillshade operation computes the illumination angle and shadows of a surface given a light source. Try adjusting the position of the sun to simulate the passing of time.
             </p>
             <div class="controller-wrapper">
                 <div class="controller">
