--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -11,7 +11,7 @@
                 Weighted overlay
             </h2>
             <p>
-               Try adjusting the weights below to find your ideal location. If you <span class="overlay-dislike">dislike</span> rail stops, give them a negative weight. If you <span class="overlay-prefer">prefer</span> bars, give them a positive weight.
+               Try adjusting the weights below to find your ideal location. If you want to <span class="overlay-dislike">avoid</span> rail stops, give them a negative weight. If you <span class="overlay-prefer">prefer</span> bars, give them a positive weight.
             </p>
             <div class="controller-wrapper">
                 <div class="controller">
@@ -119,7 +119,7 @@
       <div class="carousel-inner" id="demo-maps">
         <div class="item active">
             <div class="demo-map-legend">
-                Dislike &nbsp; <img src="img/red-to-blue.png"> &nbsp; Prefer
+                Avoid &nbsp; <img src="img/red-to-blue.png"> &nbsp; Prefer
             </div>
             <div id="map-1" class="demo-map">
             </div>
