Sun is now on  the "top" of the screen

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -65,12 +65,9 @@
             <div class="controller-wrapper">
                 <div class="controller">
                     <div class="row">
-                        <div class="col-sm-6">
-                            <h6 class="demo-controller-label">Time</h6>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="text" id="sun-time" class="demo-amount" disabled>
-                        </div>
+                        <br/>
+                        <br>
+                        <!--time used to be here-->
                     </div>
                     <div class="sun-slider-content"></div>
                 </div>
