fix small typo on homepage

--- a/site/src/main/twirl/home.scala.html
+++ b/site/src/main/twirl/home.scala.html
@@ -206,7 +206,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>Demos</h3>
-                <p>Check out these demo projects that use GeoTrellis. The source for these projects and more can be found at <a href="http://github.com/geotrellis">our github account</a></p>
+                <p>Check out these demo projects that use GeoTrellis. The source for these projects and more can be found at <a href="http://github.com/geotrellis">our Github account.</a></p>
             </div>
             <div class="col-sm-3 col-sm-offset-2">
                 <a class="demo" href="http://transit.geotrellis.com/">
