--- a/site/src/main/resources/documentation-root.html
+++ b/site/src/main/resources/documentation-root.html
@@ -1,5 +1,5 @@
 <div class="section" id="documentation">
 <h1>Release Documentation</h1>
-<p>These pages contain the documentation for current and previous <em>spray</em> releases.</p>
+<p>These pages contain the documentation for current and previous <em>geotrellis</em> releases.</p>
 <p>Please select a release in the side-bar!</p>
 </div>
