Clean up 0.9 docs for deployment

--- a/site/0.9docs/admin.html
+++ b/site/0.9docs/admin.html
@@ -5,7 +5,7 @@ title: GeoTrellis | Fast Raster Processing
 
 {% include 09sidebar.html %}
 <section class="mainContentWrap">
-  <div class="container mainContent">
+  <div class="container">
       <!--main content-->
       <div class="span9">
         <div class="row-fluid">
