--- a/site/0.9docs/akka-engine.html
+++ b/site/0.9docs/akka-engine.html
@@ -5,7 +5,7 @@ title: GeoTrellis | Fast Raster Processing
 
 {% include 09sidebar.html %}
 <section class="mainContentWrap">
-  <div class="container mainContent">
+  <div class="container">
 
     <div class="row-fluid">
       <!--main content-->
