Update links to documentation

--- a/site/documentation.html
+++ b/site/documentation.html
@@ -44,4 +44,15 @@ title: Geotrellis | Fast Raster Processing
         </div>
     </div>
 </div>
+<div>
+    <div class="container">
+        <h2>Contributing to GeoTrellis</h2>
+        <hr class="half" />
+        <div class="row">
+          <div class="col-sm-12">
+            <p>GeoTrellis is an open source project, so contributions of any kind are welcome and appreciated! Contributors will need to sign a CLA (Contributor's License Agreement). These details and others relating to GeoTrellis contributions can be found <a href="https://github.com/geotrellis/geotrellis/blob/master/contributing.md#contributing">here</a>.</p>
+          </div>
+        </div>
+    </div>
+</div>
 
