--- a/site/documentation.html
+++ b/site/documentation.html
@@ -4,55 +4,80 @@ title: Geotrellis | Fast Raster Processing
 ---
 
 <div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-              <h2 class="overview"><span class="brandname-emphasis">GeoTrellis</span> aims to be provide approachable, user-friendly documentation.</h2>
-              <p>In addition to the standard library API documentation, there are example and use-case focused docs available which describe the motivations, goals, and common patterns of each submodule within GeoTrellis. These docs are more prosaic and are a good starting place for newcomers.</p>
-              <p>If the API docs leave anything out and you can't find what you're looking for in GeoTrellis' markdown-based documentation, check out the source. (No, really! We try to make the code as clear, clean and readable as possible and the <a href="https://gitter.im/geotrellis/geotrellis">Gitter channel</a> is a great place to ask any questions.) Then, consider contributing to the project so that your efforts might help others in the future.</p>
-            </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="overview">
+          <span class="brandname-emphasis">GeoTrellis</span> Documentation
+        </h2>
+        <p>
+          In addition to our API documentation, we provide a detailed
+          <a href="http://geotrellis.readthedocs.io/en/latest/">User Guide</a>.
+          Please see that guide for setup instructions, tutorials,
+          and explanations of GeoTrellis/GIS concepts.
+        </p>
+
+        <p>
+          If you can't find exactly what you're looking for in either our
+          Guide or API docs, feel free to join us in our
+          <a href="https://gitter.im/geotrellis/geotrellis">Gitter channel</a>,
+          where we can (as live as possible) answer your questions.
+        </p>
+
+      </div>
     </div>
-</div>
-<div>
-    <div class="container">
-        <h2>Scala API Documentation</h2>
-        <hr class="half" />
-        <div class="row">
-          <div class="col-sm-8">
-            <p>The 'latest' scaladoc tracks the master branch on github. Tagged releases are identified by their version number</p>
-            <p>Markdown documentation began with release 0.9</p>
-          </div>
-          <div class="col-sm-4">
-            {% include scaladoc-versions.html %}
-          </div>
-        </div>
-    </div>
-</div>
-<div>
-    <div class="container">
-        <h2>Markdown Documentation</h2>
-        <hr class="half" />
-        <div class="row">
-          <div class="col-sm-8">
-            <p>The markdown documentation is full of useful explanations and examples. The links at right take you to the markdown documentation index, which (like all the markdown docs) is version-controlled alongside GeoTrellis code.</p>
-            <p>Markdown documentation began with release 0.10</p>
-          </div>
-          <div class="col-sm-4">
-            {% include markdowndoc-versions.html %}
-          </div>
-        </div>
-    </div>
-</div>
-<div>
-    <div class="container">
-        <h2>Contributing to GeoTrellis</h2>
-        <hr class="half" />
-        <div class="row">
-          <div class="col-sm-12">
-            <p>GeoTrellis is an open source project, so contributions of any kind are welcome and appreciated! Contributors will need to sign a CLA (Contributor's License Agreement). These details and others relating to GeoTrellis contributions can be found <a href="https://github.com/geotrellis/geotrellis/blob/master/contributing.md#contributing">here</a>.</p>
-          </div>
-        </div>
-    </div>
+  </div>
 </div>
 
+<div>
+  <div class="container">
+    <h2>GeoTrellis User Guide</h2>
+    <hr class="half" />
+    <div class="row">
+      <div class="col-sm-8">
+        Our User Guide is hosted on <a href="https://readthedocs.org/">ReadTheDocs</a>,
+        and provides all the conceptual information required to use GeoTrellis.
+      </div>
+      <div class="col-sm-4">
+        {% include rtd-links.html %}
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div>
+  <div class="container">
+    <h2>Scala API Documentation</h2>
+    <hr class="half" />
+    <div class="row">
+      <div class="col-sm-8">
+        <p>
+          The <i>latest</i> Scaladoc tracks the master branch on github. Tagged
+          releases are identified by their version number.
+        </p>
+      </div>
+      <div class="col-sm-4">
+        {% include scaladoc-versions.html %}
+      </div>
+    </div>
+  </div>
+</div>
+
+<div>
+  <div class="container">
+    <h2>Contributing to GeoTrellis</h2>
+    <hr class="half" />
+    <div class="row">
+      <div class="col-sm-12">
+        <p>
+          GeoTrellis is an open source project, so contributions of any kind
+          are welcome and appreciated! Contributors will need to sign a CLA
+          (Contributor's License Agreement). These details and others relating to
+          GeoTrellis contributions can be found
+          <a href="http://geotrellis.readthedocs.io/en/latest/contributing/">here</a>.
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
