All http calls should be https

--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,7 @@ title: GeoTrellis | Fast Raster Processing
           Travelshed
         </h2>
         <p>
-          Given a starting location and a type of transportation, how far can I travel in a given amount of time? Move the <img src="http://api.tiles.mapbox.com/mapbox.js/v1.3.1/images/marker-icon-2x.png" style="height: 16px; margin-top: -4px"> marker around the map to find out.
+          Given a starting location and a type of transportation, how far can I travel in a given amount of time? Move the <img src="https://api.tiles.mapbox.com/mapbox.js/v1.3.1/images/marker-icon-2x.png" style="height: 16px; margin-top: -4px"> marker around the map to find out.
         </p>
         <div class="controller-wrapper">
           <div class="controller">
@@ -326,6 +326,6 @@ title: GeoTrellis | Fast Raster Processing
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script src="http://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js"></script>
+<script src="https://api.tiles.mapbox.com/mapbox.js/v1.3.1/mapbox.js"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script data-main="js/demo/main" src="js/require.min.js"></script>
