--- a/static/index.html
+++ b/static/index.html
@@ -88,6 +88,42 @@ title: GeoTrellis | Fast Raster Processing
           </div>
         </div>
       </div>
+      <div id="controller-3" class="demo-container item">
+        <h4 class="demo-controller-super-header">
+          GeoTrellis in Action:
+        </h4>
+        <h2 class="demo-controller-header">
+          Travelshed
+        </h2>
+        <p>
+          Given a starting location and a type of transportation, how far can I travel in a given amount of time? Move the <img src="https://api.tiles.mapbox.com/mapbox.js/v1.3.1/images/marker-icon-2x.png" style="height: 16px; margin-top: -4px"> marker around the map to find out.
+        </p>
+        <div class="controller-wrapper">
+          <div class="controller">
+            <div class="row">
+              <div class="col-sm-6">
+                <h6 class="demo-controller-label">Type of Transportation</h6>
+              </div>
+              <div class="col-sm-6">
+
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option1" value="walking"><img src="img/walk-icon.png" class="demo-map-transit-icon"> Walk
+                  </label>
+                  <label class="btn btn-primary active">
+                    <input type="radio" name="options" id="option2" value="walking,train,bus" checked><img src="img/train-icon.png" class="demo-map-transit-icon"> Transit
+                  </label>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="controller-3-slider-1"></div>
+      </div>
     </div>
   </div>
   <div id="carousel-map" class="carousel slide carousel-fade">
@@ -176,7 +212,7 @@ title: GeoTrellis | Fast Raster Processing
         <p>Check out these demo projects that use GeoTrellis. The source for these projects and more can be found at <a href="http://github.com/geotrellis">our Github account.</a></p>
       </div>
       <div class="col-sm-3 col-sm-offset-2">
-        <a class="demo" href="http://transit.geotrellis.com/">
+        <a class="demo" href="https://transit.geotrellis.io/">
           <img src="/img/demo_01.jpg" />
           <h4>GeoTrellis Transit</h4>
         </a>
