Add docs CloudFront distribution
- Forwards requests for docs.geotrellis.io to geotrellis.readthedocs.io
- Update documentation links

--- a/static/documentation.html
+++ b/static/documentation.html
@@ -12,7 +12,7 @@ title: Geotrellis | Fast Raster Processing
         </h2>
         <p>
           In addition to our API documentation, we provide a detailed
-          <a href="http://geotrellis.readthedocs.io/en/latest/">User Guide</a>.
+          <a href="https://docs.geotrellis.io/en/latest/">User Guide</a>.
           Please see that guide for setup instructions, tutorials,
           and explanations of GeoTrellis/GIS concepts.
         </p>
@@ -75,7 +75,7 @@ title: Geotrellis | Fast Raster Processing
           are welcome and appreciated! Contributors will need to sign a CLA
           (Contributor's License Agreement). These details and others relating to
           GeoTrellis contributions can be found
-          <a href="http://geotrellis.readthedocs.io/en/latest/contributing/">here</a>.
+          <a href="https://docs.geotrellis.io/en/latest/contributing.html">here</a>.
         </p>
       </div>
     </div>
