--- a/static/index.html
+++ b/static/index.html
@@ -229,17 +229,11 @@ title: GeoTrellis | Fast Raster Processing
 <div id="case-studies">
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-sm-4">
         <h3>Case Studies</h3>
         <p>Explore applications that leverage the high performance geoprocessing capabilities of GeoTrellis.</p>
       </div>
-      <div class="col-sm-3">
-        <a data-toggle="modal" class="case-study" data-target="#coaModal" href="#">
-          <img src="/img/case_study_02.png" />
-          <h4>City of Asheville, Priority Places</h4>
-        </a>
-      </div>
-      <div class="col-sm-3">
+      <div class="col-sm-3 col-sm-offset-2">
         <a data-toggle="modal" class="case-study" data-target="#mmwModal" href="#">
           <img src="/img/case_study_03.png" />
           <h4>Model My Watershed</h4>
@@ -270,29 +264,6 @@ title: GeoTrellis | Fast Raster Processing
           </div>
           <div class="modal-body-sidebar col-md-3">
             <a class="btn btn-primary btn-md" role="button" href="http://www.wikiwatershed.org/">Visit Site</a>
-          </div>
-          <br style="clear: both">
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="modal fade" id="coaModal" tabindex="-1" role="dialog" aria-labelledby="coaModalLabel" aria-hidden="true">
-  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5>Case Study</h5>
-        <h2 class="modal-title" id="coaModalLabel">City of Asheville, Priority Places</h2>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="modal-body-content col-md-9">
-            <p>Priority Places was developed to enable citizens and entrepreneurs to pick ideal sites for facilities, activities and businesses according to criteria of their choice. Visitors to the website can select a series of "decision factors" to create a siting scenario, assign weights to each factor and then generate a "heat map" showing the locations best satisfy the factors and weights. They can then interactively adjust the weights and factors, revising the priority map in real time.</p>
-            <img src="/img/case_study_lg_02.png" />
-          </div>
-          <div class="modal-body-sidebar col-md-3">
-            <a class="btn btn-primary btn-md" role="button" href="http://priorityplaces.ashevillenc.gov/index.html">Visit Site</a>
           </div>
           <br style="clear: both">
         </div>
