Remove ReadTheDocs link
Link to user gude home page instead

--- a/static/documentation.html
+++ b/static/documentation.html
@@ -35,7 +35,7 @@ title: Geotrellis | Fast Raster Processing
     <hr class="half" />
     <div class="row">
       <div class="col-sm-8">
-        Our User Guide is hosted on <a href="https://readthedocs.org/">ReadTheDocs</a>,
+        Our <a href="https://geotrellis.readthedocs.io/en/latest/">User Guide</a> is hosted on ReadTheDocs,
         and provides all the conceptual information required to use GeoTrellis.
       </div>
       <div class="col-sm-4">
